--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.6",
-    "sendmail": "^1.2.0"
+    "sendmail": "^1.2.0",
+    "body-parser": "^1.16.0",
+    "express": "^4.14.0"
   }
 }
