--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Luis Rodriguez",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.5.6",
-    "sendmail": "^1.2.0",
     "body-parser": "^1.16.0",
-    "express": "^4.14.0"
+    "ejs": "^2.5.6",
+    "express": "^4.14.0",
+    "nodemailer": "^4.2.0",
+    "sendmail": "^1.2.0",
+    "xoauth2": "^1.2.0"
   }
 }
